# rust-wurfl

./: CHANGELOG.md  Cargo.toml  README.md
examples/: example.rs  hyper_example.rs  multithread_example.rs
src/: device.rs  lib.rs  wurfl.rs
wurfl-sys/: Cargo.toml  build.rs
wurfl-sys/src/: bindings.rs
